--- a/source/splotify.html
+++ b/source/splotify.html
@@ -379,9 +379,12 @@ need to access Spotify data.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>client_id</strong> (<em>str</em>) – SPOTIPY_CLIENT_ID from Spotify developer app you created.</p></li>
-<li><p><strong>client_secret</strong> (<em>str</em>) – SPOTIPY_CLIENT_SECRET from Spotify developer app you created.</p></li>
-<li><p><strong>redirect_uri</strong> (<em>str</em>) – SPOTIPY_REDIRECT_URI from Spotify developer app you created.</p></li>
+<li><p><strong>client_id</strong> (<em>str</em>) – SPOTIPY_CLIENT_ID from Spotify developer app you
+created.</p></li>
+<li><p><strong>client_secret</strong> (<em>str</em>) – SPOTIPY_CLIENT_SECRET from Spotify developer app
+you created.</p></li>
+<li><p><strong>redirect_uri</strong> (<em>str</em>) – SPOTIPY_REDIRECT_URI from Spotify developer app you
+created.</p></li>
 </ul>
 </dd>
 </dl>
