auto-updating docs

--- a/source/splotify.html
+++ b/source/splotify.html
@@ -271,12 +271,8 @@ to add. Supports Spotify URIs, Spotify URLs, and Spotify IDs.</p>
 <dd><p>Adds a single track to a <cite>Data</cite> instance.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
-<dd class="field-odd"><ul class="simple">
-<li><p><strong>id</strong> (<em>str</em>) – The URI of the track you want to add. Supports Spotify</p></li>
-<li><p><strong>URIs</strong> – </p></li>
-<li><p><strong>URLs</strong> (<em>Spotify</em>) – </p></li>
-<li><p><strong>IDs.</strong> (<em>and Spotify</em>) – </p></li>
-</ul>
+<dd class="field-odd"><p><strong>id</strong> (<em>str</em>) – The URI of the track you want to add. Supports Spotify
+URIs, Spotify URLs, and Spotify IDs.</p>
 </dd>
 </dl>
 </dd></dl>
