auto-updating docs

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -77,6 +77,7 @@
 <li><a href="splotify/helpers.html">splotify.helpers</a></li>
 <li><a href="splotify/plots/audiofeatures.html">splotify.plots.audiofeatures</a></li>
 <li><a href="splotify/plots/category.html">splotify.plots.category</a></li>
+<li><a href="splotify/plots/popularity.html">splotify.plots.popularity</a></li>
 <li><a href="splotify/spotifyapi.html">splotify.spotifyapi</a></li>
 <li><a href="splotify/tests/conftest.html">splotify.tests.conftest</a></li>
 <li><a href="splotify/tests/test_audiofeatures.html">splotify.tests.test_audiofeatures</a></li>
@@ -84,6 +85,7 @@
 <li><a href="splotify/tests/test_data.html">splotify.tests.test_data</a></li>
 <li><a href="splotify/tests/test_helpers.html">splotify.tests.test_helpers</a></li>
 <li><a href="splotify/tests/test_integration.html">splotify.tests.test_integration</a></li>
+<li><a href="splotify/tests/test_popularity.html">splotify.tests.test_popularity</a></li>
 </ul>
 
            </div>
