--- a/genindex.html
+++ b/genindex.html
@@ -102,15 +102,17 @@
 </li>
       <li><a href="source/splotify.html#splotify.data.Data.add_playlists">add_playlists() (splotify.data.Data method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/splotify.html#splotify.data.Data.add_track">add_track() (splotify.data.Data method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/splotify.html#splotify.data.Data.add_tracks">add_tracks() (splotify.data.Data method)</a>
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_audiofeatures.afp">afp() (in module splotify.tests.test_audiofeatures)</a>
 </li>
       <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.album">album() (splotify.spotifyapi.SpotifyApi method)</a>
+</li>
+      <li><a href="source/splotify.plots.html#splotify.plots.popularity.PopularityPlot.album_bar_chart">album_bar_chart() (splotify.plots.popularity.PopularityPlot method)</a>
 </li>
       <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.audio_features">audio_features() (splotify.spotifyapi.SpotifyApi method)</a>
 </li>
@@ -138,6 +140,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/splotify.tests.html#splotify.tests.test_category.cp">cp() (in module splotify.tests.test_category)</a>
+</li>
       <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.current_user_playlists">current_user_playlists() (splotify.spotifyapi.SpotifyApi method)</a>
 </li>
   </ul></td>
@@ -190,6 +194,8 @@
 </li>
         <li><a href="source/splotify.plots.html#module-splotify.plots.category">splotify.plots.category</a>
 </li>
+        <li><a href="source/splotify.plots.html#module-splotify.plots.popularity">splotify.plots.popularity</a>
+</li>
         <li><a href="source/splotify.html#module-splotify.spotifyapi">splotify.spotifyapi</a>
 </li>
         <li><a href="source/splotify.tests.html#module-splotify.tests">splotify.tests</a>
@@ -206,6 +212,8 @@
 </li>
         <li><a href="source/splotify.tests.html#module-splotify.tests.test_integration">splotify.tests.test_integration</a>
 </li>
+        <li><a href="source/splotify.tests.html#module-splotify.tests.test_popularity">splotify.tests.test_popularity</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -219,9 +227,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/splotify.plots.html#splotify.plots.category.CategoryPlot.pie_chart">pie_chart() (splotify.plots.category.CategoryPlot method)</a>
 </li>
+      <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.playlist">playlist() (splotify.spotifyapi.SpotifyApi method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.playlist">playlist() (splotify.spotifyapi.SpotifyApi method)</a>
+      <li><a href="source/splotify.plots.html#splotify.plots.popularity.PopularityPlot">PopularityPlot (class in splotify.plots.popularity)</a>
+</li>
+      <li><a href="source/splotify.tests.html#splotify.tests.test_popularity.pp">pp() (in module splotify.tests.test_popularity)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -285,6 +297,13 @@
         <li><a href="source/splotify.plots.html#module-splotify.plots.category">module</a>
 </li>
       </ul></li>
+      <li>
+    splotify.plots.popularity
+
+      <ul>
+        <li><a href="source/splotify.plots.html#module-splotify.plots.popularity">module</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -343,6 +362,13 @@
         <li><a href="source/splotify.tests.html#module-splotify.tests.test_integration">module</a>
 </li>
       </ul></li>
+      <li>
+    splotify.tests.test_popularity
+
+      <ul>
+        <li><a href="source/splotify.tests.html#module-splotify.tests.test_popularity">module</a>
+</li>
+      </ul></li>
       <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi">SpotifyApi (class in splotify.spotifyapi)</a>
 </li>
   </ul></td>
@@ -357,6 +383,8 @@
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_data.test_add_tracks">test_add_tracks() (in module splotify.tests.test_data)</a>
 </li>
+      <li><a href="source/splotify.tests.html#splotify.tests.test_popularity.test_album_bar_chart">test_album_bar_chart() (in module splotify.tests.test_popularity)</a>
+</li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_category.test_bar_chart">test_bar_chart() (in module splotify.tests.test_category)</a>
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_audiofeatures.test_box_plot">test_box_plot() (in module splotify.tests.test_audiofeatures)</a>
@@ -367,10 +395,10 @@
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_helpers.test_my_id">test_my_id() (in module splotify.tests.test_helpers)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/splotify.tests.html#splotify.tests.test_category.test_pie_chart">test_pie_chart() (in module splotify.tests.test_category)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/splotify.tests.html#splotify.tests.test_audiofeatures.test_scatter_plot_2d">test_scatter_plot_2d() (in module splotify.tests.test_audiofeatures)</a>
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_audiofeatures.test_scatter_plot_2d_average">test_scatter_plot_2d_average() (in module splotify.tests.test_audiofeatures)</a>
@@ -383,7 +411,11 @@
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.test_audiofeatures.test_select_features">test_select_features() (in module splotify.tests.test_audiofeatures)</a>
 </li>
+      <li><a href="source/splotify.tests.html#splotify.tests.test_popularity.test_track_bar_chart">test_track_bar_chart() (in module splotify.tests.test_popularity)</a>
+</li>
       <li><a href="source/splotify.html#splotify.spotifyapi.SpotifyApi.track">track() (splotify.spotifyapi.SpotifyApi method)</a>
+</li>
+      <li><a href="source/splotify.plots.html#splotify.plots.popularity.PopularityPlot.track_bar_chart">track_bar_chart() (splotify.plots.popularity.PopularityPlot method)</a>
 </li>
       <li><a href="source/splotify.tests.html#splotify.tests.conftest.track_data">track_data() (in module splotify.tests.conftest)</a>
 </li>
@@ -401,6 +433,8 @@
         <li><a href="source/splotify.tests.html#splotify.tests.test_helpers.vcr_cassette_dir">(in module splotify.tests.test_helpers)</a>
 </li>
         <li><a href="source/splotify.tests.html#splotify.tests.test_integration.vcr_cassette_dir">(in module splotify.tests.test_integration)</a>
+</li>
+        <li><a href="source/splotify.tests.html#splotify.tests.test_popularity.vcr_cassette_dir">(in module splotify.tests.test_popularity)</a>
 </li>
       </ul></li>
   </ul></td>
